--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.6.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-datepicker": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-loader-spinner": "^6.1.6",
     "recharts": "^2.12.3"
   },
   "devDependencies": {
